--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:orientation="vertical"
+        android:padding="10dp"
         android:textAlignment="gravity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView7"
@@ -27,7 +27,7 @@
             android:layout_marginBottom="12dp"
             android:gravity="center"
             android:paddingTop="30dp"
-            android:text="تذكر، المالُ رَئيسٌ سَيِّء، لكِنَّهُ خادِمٌ مُمتاز.."
+            android:text="@string/quotation"
             android:textColor="@color/jacarta"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -58,7 +58,7 @@
                 android:layout_margin="35dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="14dp"
-                android:text="كامل الدخل هذا الشهر"
+                android:text="@string/income_during_the_month"
                 android:textColor="@color/head_filed_color"
                 android:textStyle="bold" />
 
@@ -70,7 +70,7 @@
                 android:layout_marginStart="35dp"
                 android:layout_marginEnd="42dp"
                 android:layout_marginBottom="17dp"
-                android:text="المتبقي من الدخل"
+                android:text="@string/remainder_of_the_income"
                 android:textColor="@color/head_filed_color"
                 android:textStyle="bold" />
 
@@ -141,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center"
                 android:layout_marginEnd="34dp"
-                android:text="مجموع مدخرات الشهر الماضي"
+                android:text="@string/your_extra_income"
                 android:textColor="@color/head_filed_color"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -175,7 +175,7 @@
                 android:layout_gravity="left|top"
                 android:layout_margin="30dp"
                 android:paddingTop="10dp"
-                android:text="مجموع دخلك الإضافي"
+                android:text="@string/your_extra_income"
                 android:textColor="@color/bright_gray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -193,7 +193,7 @@
                 android:layout_gravity="right|top"
                 android:layout_margin="19dp"
                 android:paddingTop="20dp"
-                android:text=" مجموع مصاريفك هذا الشهر"
+                android:text="@string/monthly_expenses"
                 android:textColor="@color/bright_gray"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -213,25 +213,23 @@
     </LinearLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:id="@+id/coordinatorLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/app_bar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_gravity="bottom"
             android:backgroundTint="@color/light_silver"
-            app:fabCradleMargin="8dp"
+            app:fabCradleMargin="10dp"
             app:fabCradleRoundedCornerRadius="50dp"
-            app:fabCradleVerticalOffset="6dp"
+            app:fabCradleVerticalOffset="2dp"
             app:layout_anchor="@+id/app_bar"
             app:layout_anchorGravity="bottom|center">
 
@@ -245,13 +243,11 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
                     android:layout_weight="0.2"
-                    android:gravity="center|top"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imgHome"
+                        android:id="@+id/imgHomePage"
                         android:layout_width="wrap_content"
                         android:layout_height="34dp"
                         android:layout_margin="4dp"
@@ -259,10 +255,11 @@
                         app:srcCompat="@drawable/home" />
 
                     <TextView
+                        android:id="@+id/txtHomePage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="الرئيسية"
+                        android:text="@string/HomePage"
                         android:textAlignment="center"
                         android:textColor="@color/jacarta"
                         android:textSize="12sp"
@@ -273,24 +270,24 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
-                    android:layout_weight="0.2"
                     android:gravity="center|top"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingRight="70dp">
 
                     <ImageView
-                        android:id="@+id/imgCal"
-                        android:layout_width="100dp"
+                        android:id="@+id/imgMonthsRecord"
+                        android:layout_width="70dp"
                         android:layout_height="34dp"
                         android:layout_margin="4dp"
                         android:textAlignment="center"
                         app:srcCompat="@drawable/calendar_masroofe" />
 
                     <TextView
+                        android:id="@+id/txtMonthsRecord"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="الأشهر السابقة"
+                        android:text="@string/MonthsRecord"
                         android:textAlignment="center"
                         android:textColor="@color/jacarta"
                         android:textSize="12sp"
@@ -301,38 +298,12 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
-                    android:layout_weight="0.2"
-                    android:gravity="center|top"
-                    android:orientation="vertical"
-                    android:visibility="invisible">
-
-                    <ImageView
-                        android:layout_width="140dp"
-                        android:layout_height="40dp"
-                        android:layout_margin="4dp"
-                        android:textAlignment="center"
-                        app:srcCompat="@drawable/add_masroofe" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Add"
-                        android:textAlignment="center"
-                        android:textColor="@color/jacarta"
-                        android:textSize="12sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="6dp"
-                    android:layout_weight="0.2"
+                    android:layout_weight="0.1"
                     android:gravity="center|top"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imgGuide"
+                        android:id="@+id/imgUserGuide"
                         android:layout_width="wrap_content"
                         android:layout_height="34dp"
                         android:layout_margin="4dp"
@@ -340,10 +311,11 @@
                         app:srcCompat="@drawable/guide" />
 
                     <TextView
+                        android:id="@+id/txtUserGuide"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="دليل المستخدم"
+                        android:text="@string/UserGuide"
                         android:textAlignment="center"
                         android:textColor="@color/jacarta"
                         android:textSize="12sp"
@@ -354,13 +326,12 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
                     android:layout_weight="0.2"
                     android:gravity="center|top"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imgMenu"
+                        android:id="@+id/imgSetting"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:layout_margin="6dp"
@@ -368,9 +339,10 @@
                         app:srcCompat="@drawable/setting_icon" />
 
                     <TextView
+                        android:id="@+id/txtSetting"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="الإعدادات"
+                        android:text="@string/Settings"
                         android:textAlignment="center"
                         android:textColor="@color/jacarta"
                         android:textSize="12sp"
@@ -383,15 +355,13 @@
         </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/ParAddButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.2"
             android:clickable="true"
             android:contentDescription="@string/appbar_scrolling_view_behavior"
             android:foreground="@drawable/add_masroofe"
             android:foregroundTint="@color/jacarta"
-            android:onClick="addOnClick"
             app:backgroundTint="@color/vista_blue"
             app:layout_anchor="@id/app_bar">
 
