--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -47,97 +45,93 @@
 
 
             <TextView
-                android:text="@string/full_name"
-                style="@style/label_feilds_style"/>
+                style="@style/label_fields_style"
+                android:text="@string/full_name" />
 
             <EditText
                 android:id="@+id/fullName"
+                style="@style/fields_style"
                 android:hint="@string/full_name_hint"
-                android:maxLines="1"
                 android:inputType="textPersonName"
-                style="@style/fields_style" />
+                android:maxLines="1" />
 
             <TextView
-                android:text="@string/birth_day"
-                style="@style/label_feilds_style" />
+                style="@style/label_fields_style"
+                android:text="@string/birth_day" />
 
             <EditText
                 android:id="@+id/birthDay"
+                style="@style/fields_style"
                 android:hint="@string/birthday_hint"
-                android:maxLines="1"
                 android:inputType="textPersonName"
-                style="@style/fields_style"/>
+                android:maxLines="1" />
 
 
             <TextView
-                android:text="@string/emailTitle"
-                style="@style/label_feilds_style" />
+                style="@style/label_fields_style"
+                android:text="@string/emailTitle" />
 
             <EditText
                 android:id="@+id/emailSignup"
+                style="@style/fields_style"
                 android:hint="@string/email_hint"
                 android:inputType="textPersonName"
-                android:maxLines="1"
-                style="@style/fields_style"/>
+                android:maxLines="1" />
 
             <TextView
-                android:text="@string/passwordTitle"
-                style="@style/label_feilds_style"
-                />
+                style="@style/label_fields_style"
+                android:text="@string/passwordTitle" />
 
             <EditText
                 android:id="@+id/passwordSignup"
-                android:maxLines="1"
+                style="@style/fields_style"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                style="@style/fields_style"/>
+                android:maxLines="1" />
 
             <TextView
-                android:text="@string/repeatPassword"
-                style="@style/label_feilds_style"
-                />
+                style="@style/label_fields_style"
+                android:text="@string/repeatPassword" />
 
             <EditText
                 android:id="@+id/passwordRepeatSignup"
+                style="@style/fields_style"
                 android:hint="@string/repeat_password_hint"
-                android:inputType="textPassword"
-                style="@style/fields_style"/>
+                android:inputType="textPassword" />
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="textStart"
-                android:text="@string/fixed_income_message"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginStart="32dp"
-                android:textStyle="bold"
+                android:text="@string/fixed_income_message"
+                android:textAlignment="textStart"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                />
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="right"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="50dp"
                 android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp">
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="50dp"
+                android:gravity="right"
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/finishBtnSignup"
-                    android:text="@string/finishSignup"
-                    style="@style/btns_signup_style" />
+                    style="@style/btns_signup_style"
+                    android:text="@string/finishSignup" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/nextBtnSignup"
-                    android:text="@string/nextSignup"
-                    android:layout_marginStart="20dp"
                     style="@style/btns_signup_style"
-                    />
+                    android:layout_marginStart="20dp"
+                    android:text="@string/nextSignup" />
             </LinearLayout>
 
         </LinearLayout>
