--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Bottom_app_bar"
-        parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+    <style name="Bottom_app_bar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#0F9D58</item>
         <item name="colorPrimaryVariant">#0F9D58</item>
         <item name="colorOnPrimary">#000</item>
@@ -30,7 +30,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="label_feilds_style">
+    <style name="label_fields_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">15dp</item>
@@ -42,7 +42,15 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="btns_login_style">
+    <style name="spinners_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textColor">@color/alice_blue</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="buttons_login_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">32dp</item>
