--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -72,6 +72,17 @@
             android:inputType="textPassword" />
 
         <TextView
+            android:id="@+id/error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:textAlignment="textStart"
+            android:textColor="@color/white"
+            android:textDirection="firstStrong" />
+
+        <TextView
             android:id="@+id/forgetPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
