--- a/app/src/main/res/layout/update_user_information_activity.xml
+++ b/app/src/main/res/layout/update_user_information_activity.xml
@@ -48,16 +48,18 @@
             android:id="@+id/fullName"
             style="@style/fields_style"
             android:hint="@string/full_name_hint"
+            android:inputType="textPersonName"
             android:maxLines="1" />
 
         <TextView
             style="@style/label_fields_style"
-            android:text="@string/birth_day" />
+            android:text="@string/usernameTitle" />
 
         <EditText
-            android:id="@+id/birthDay"
+            android:id="@+id/username"
             style="@style/fields_style"
-            android:hint="@string/birthday_hint"
+            android:hint="@string/username_hint"
+            android:inputType="textPersonName"
             android:maxLines="1" />
 
         <TextView
@@ -65,9 +67,10 @@
             android:text="@string/emailTitle" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/email"
             style="@style/fields_style"
             android:hint="@string/email_hint"
+            android:inputType="textEmailAddress"
             android:maxLines="1" />
 
         <androidx.appcompat.widget.AppCompatButton
