--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="alice_blue">#84A6D3</color>
     <color name="head_filed_color">#2F3363</color>
     <color name="place_holder_color">#a2a4b5</color>
+    <color name="red">#ed1c24</color>
 </resources>
