--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -79,7 +79,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:textAlignment="textStart"
-            android:textColor="@color/white"
+            android:textColor="@color/red"
             android:textDirection="firstStrong" />
 
         <TextView
