finish Update password

--- a/app/src/main/res/layout/update_user_password_activity.xml
+++ b/app/src/main/res/layout/update_user_password_activity.xml
@@ -73,6 +73,17 @@
             android:inputType="textPassword"
             android:maxLines="1" />
 
+        <TextView
+            android:id="@+id/error"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:textAlignment="textStart"
+            android:textColor="@color/red"
+            android:textDirection="firstStrong" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/updateUserPassword"
             android:layout_width="match_parent"
