--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -77,6 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="32dp"
             android:textAlignment="textStart"
             android:textColor="@color/red"
