--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -71,7 +71,7 @@
                 android:text="@string/emailTitle" />
 
             <EditText
-                android:id="@+id/email"
+                android:id="@+id/emailSignup"
                 style="@style/fields_style"
                 android:hint="@string/email_hint"
                 android:inputType="textEmailAddress"
