--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,56 +50,72 @@
                 app:layout_constraintTop_toTopOf="@+id/textView13"
                 app:srcCompat="@drawable/main_drawable_top" />
 
-            <TextView
-                android:id="@+id/textView2"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="56dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="right|center"
-                android:layout_margin="35dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="14dp"
-                android:text="@string/income_during_the_month"
-                android:textColor="@color/head_filed_color"
-                android:textStyle="bold" />
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginRight="17dp"
+                    android:layout_marginLeft="17dp"
+                    android:text="@string/income_during_the_month"
+                    android:textColor="@color/head_filed_color"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="35dp"
+                    android:layout_marginBottom="35dp"
+                    android:fontFamily="monospace"
+                    android:text="0.0"
+                    android:textColor="@color/bright_gray"
+                    android:textSize="34sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="42dp"
-                android:layout_marginBottom="17dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginRight="17dp"
+                android:layout_marginLeft="17dp"
                 android:text="@string/remainder_of_the_income"
                 android:textColor="@color/head_filed_color"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|bottom"
-                android:layout_margin="50dp"
-                android:layout_marginStart="13dp"
-                android:layout_marginBottom="4dp"
-                android:fontFamily="monospace"
-                android:paddingTop="10dp"
-                android:text="0.0"
-                android:textColor="@color/bright_gray"
-                android:textSize="34sp" />
-
             <TextView
                 android:id="@+id/fixedIncome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|bottom"
-                android:layout_margin="50dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginBottom="4dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginBottom="35dp"
                 android:fontFamily="monospace"
                 android:text="0.0"
                 android:textColor="@color/bright_gray"
                 android:textSize="34sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView13"
@@ -121,7 +137,9 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/light_silver_p" />
+                app:srcCompat="@drawable/light_silver_p"
+
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -151,6 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="208dp">
 
+
             <ImageView
                 android:layout_width="180dp"
                 android:layout_height="190dp"
@@ -159,26 +178,37 @@
                 android:layout_weight="1"
                 app:srcCompat="@drawable/main_drawable" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingTop="20dp"
+                android:text="@string/your_extra_income"
+                android:textColor="@color/bright_gray"
+                android:textSize="12dp"
+                android:textStyle="bold" />
             <TextView
                 android:layout_width="88dp"
                 android:layout_height="66dp"
-                android:layout_gravity="left|bottom"
-                android:layout_margin="50dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:fontFamily="monospace"
                 android:text="0.0"
                 android:textColor="@color/bright_gray"
                 android:textSize="48sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|top"
-                android:layout_margin="30dp"
-                android:paddingTop="10dp"
-                android:text="@string/your_extra_income"
-                android:textColor="@color/bright_gray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            </LinearLayout>
 
             <ImageView
                 android:layout_width="180dp"
@@ -187,26 +217,37 @@
                 android:layout_margin="10dp"
                 app:srcCompat="@drawable/main_drawable" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|top"
-                android:layout_margin="19dp"
-                android:paddingTop="20dp"
-                android:text="@string/monthly_expenses"
-                android:textColor="@color/bright_gray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_gravity="right|center"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="98dp"
-                android:layout_height="65dp"
-                android:layout_gravity="right|bottom"
-                android:layout_margin="50dp"
-                android:fontFamily="monospace"
-                android:text="0.0"
-                android:textColor="@color/bright_gray"
-                android:textSize="48sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
+                    android:paddingTop="20dp"
+                    android:text="@string/monthly_expenses"
+                    android:textColor="@color/bright_gray"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="98dp"
+                    android:layout_height="65dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="monospace"
+                    android:text="0.0"
+                    android:textColor="@color/bright_gray"
+                    android:textSize="48sp" />
+            </LinearLayout>
 
 
         </FrameLayout>
