--- a/app/src/main/res/layout/add_activity.xml
+++ b/app/src/main/res/layout/add_activity.xml
@@ -7,7 +7,7 @@
     android:background="@color/jacarta"
     tools:context=".AddActivity">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnDefine"
         android:layout_width="350dp"
         android:layout_height="70dp"
@@ -16,37 +16,14 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/btn_fixed_inc_style" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="47dp"
-        android:layout_height="62dp"
-        android:layout_marginEnd="60dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView14"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.773"
-        app:srcCompat="@drawable/deposit" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="177dp"
-        android:layout_marginEnd="12dp"
+        android:background="@drawable/btn_fixed_inc_style"
+        android:drawableEnd="@drawable/deposit"
         android:text="تعريف حساب مصروف أو إيراد"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btnDefine"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:padding="20dp"/>
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnExp"
         android:layout_width="350dp"
         android:layout_height="70dp"
@@ -55,38 +32,15 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDefine"
-        app:srcCompat="@drawable/btn_background" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="120dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="57dp"
-        android:layout_marginEnd="31dp"
+        android:background="@drawable/btn_background"
         android:text="إنفاق مصروف"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btnExp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnExp"
-        app:layout_constraintVertical_bias="1.0" />
+        android:drawableEnd="@drawable/expense_logo"
+        android:padding="20dp"
+        />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="56dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="82dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/btnDefine"
-        app:srcCompat="@drawable/expense_logo" />
-
-    <ImageView
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnRev"
         android:layout_width="350dp"
         android:layout_height="70dp"
@@ -95,33 +49,14 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnExp"
-        app:srcCompat="@drawable/btnsignup_background" />
-
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="15dp"
+        android:background="@drawable/btnsignup_background"
         android:text="إضافة دخل / إيراد"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
-        app:layout_constraintEnd_toStartOf="@+id/imageView12"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView12"
-        app:layout_constraintVertical_bias="0.013" />
+        android:drawableEnd="@drawable/profit"
+        android:padding="20dp"
+        />
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="58dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="415dp"
-        android:layout_marginEnd="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profit" />
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
