--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -98,6 +98,17 @@
                 android:hint="@string/repeat_password_hint"
                 android:inputType="textPassword" />
 
+            <TextView
+                android:id="@+id/error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="32dp"
+                android:textAlignment="textStart"
+                android:textColor="@color/red"
+                android:textDirection="firstStrong" />
 
             <TextView
                 android:layout_width="match_parent"
